Fix navbar spacing

--- a/src/components/NavButton/navButton.css
+++ b/src/components/NavButton/navButton.css
@@ -5,6 +5,6 @@
 
 .nav-button-selected {
   background-color: #4D5562;
-  border-radius: 10px;
+  border-radius: 5px;
 }
 
